2001-06-01  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c: actually use opd_get_count -
	  fix bug with counter 1 reported results

	* dae/op_start: fix broken shell scripting

	* dae/oprofpp.c: fix list-symbols output

2001-04-30  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_start: better error reporting

	* dae/opd_proc.c: fix indentation
 
2001-04-08  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: 0.0.3 has been released. Bump cvs version
	  to 0.0.4

2001-04-05  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c: remove forced dumping. It was
	causing overhead spikes

	* doc/html/results.html:
	* doc/oprofile.sgml:
	* dae/op_start: Hopefully document dump clearly enough

2001-04-05  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h:
	* op_syscalls.c: 2.4.3 and above have a rw mmap_sem

2001-04-05  John Levon  <moz@compsoc.man.ac.uk>

	* doc/html/: added missing files

2001-04-05  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml:
	* doc/html/resources.html: add URLs

2001-04-05  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.c: fix gprof output bug. It works OK now,
	  but MULTIPLIER == 1 will break for some reason

2001-04-05  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml:
	* doc/html/: finish SGML documentation (for now)

2001-04-04  John Levon  <moz@compsoc.man.ac.uk>

	* doc/Makefile.in:
	* doc/oprofile.sgml:
	* doc/oprofile: start SGML documentation

2001-04-04  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in:
	* Makefile.in:
	* doc/Makefile.in:
	* doc/oprofile.1.in: add a manpage
 
2001-04-04  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.c: get some sort of half-working output
	in gprof format. Currently the numbers are screwed up,
	need a major trawl through gprof source to see what's
	going on. 

2001-04-04  John Levon  <moz@compsoc.man.ac.uk>

	* dae/Makefile.in:
	* dae/md5.c:
	* dae/md5.h:
	* dae/opd_proc.c:
	* dae/oprofiled.h:
	* pp/Makefile.in:
	* pp/oprofpp.c: