@@ -1,8 +1,11 @@
-This is a very much alpha pre-release version of oprofile, a transparent
+This is a beta release version of oprofile, a transparent
 low-overhead system-wide profiler.
 
 You can find some documentation in the doc/oprofile/ directory.
 
 Please visit the oprofile website at : http://oprofile.sourceforge.net/ 
 
-For more information, email John Levon, <moz@compsoc.man.ac.uk>
+oprofile was written by John Levon <moz@compsoc.man.ac.uk>.
+
+Philippe Elie <ph_e@club-internet.fr> contributed a fix for unit-mask
+testing and verified many of the event types experimentally.
