@@ -1,3 +1,11 @@
+2001-06-03  John Levon  <moz@compsoc.man.ac.uk>
+
+	* README: update
+ 
+2001-06-03  Philippe Elie  <ph_e@club-internet.fr>
+
+	* op_events.c: allow unit mask option to be bit mask
+
 2001-06-01  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/opd_proc.c: actually use opd_get_count -
